--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "source": "https://github.com/hiqdev/php-merchant-paypal",
         "issues": "https://github.com/hiqdev/php-merchant-paypal/issues",
         "wiki": "https://github.com/hiqdev/php-merchant-paypal/wiki",
-        "forum": "https://forum.hiqdev.com/"
+        "forum": "http://forum.hiqdev.com/"
     },
     "authors": [
         {
