--- a/.hidev/config.yml
+++ b/.hidev/config.yml
@@ -1,11 +1,14 @@
 package:
-    name:           php-merchant-paypal
+    name:           omnipay-paypal
     namespace:      hiqdev\php\merchant\paypal
-    title:          PayPal plugin for PHP merchant library
+    title:          PayPal driver for Omnipay PHP payment library
     type:           library
+    license:        MIT
     keywords:       php, paypal, merchant
     description:    |
-        [PayPal](https://paypal.com/) plugin for [PHP merchant library](https://github.com/hiqdev/php-merchant).
+        [Omnipay](https://github.com/omnipay/omnipay) is a framework agnostic, multi-gateway payment
+        processing library for PHP 5.3+.
+        This package implements [PayPal](https://paypal.com/) support for Omnipay.
 
 require:
     hiqdev/hidev-config:        "*"
