--- a/composer.json
+++ b/composer.json
@@ -1,49 +1,57 @@
 {
-    "name": "hiqdev/php-merchant-paypal",
+    "name": "hiqdev/omnipay-paypal",
     "type": "library",
-    "description": "PayPal plugin for PHP merchant library",
+    "description": "PayPal driver for Omnipay PHP payment library",
     "keywords": [
         "php",
         "paypal",
         "merchant"
     ],
-    "homepage": "https://github.com/hiqdev/php-merchant-paypal",
-    "license": "BSD-3-Clause",
+    "homepage": "https://github.com/hiqdev/omnipay-paypal",
+    "license": "MIT",
     "support": {
         "email": "support@hiqdev.com",
-        "source": "https://github.com/hiqdev/php-merchant-paypal",
-        "issues": "https://github.com/hiqdev/php-merchant-paypal/issues",
-        "wiki": "https://github.com/hiqdev/php-merchant-paypal/wiki",
+        "source": "https://github.com/hiqdev/omnipay-paypal",
+        "issues": "https://github.com/hiqdev/omnipay-paypal/issues",
+        "wiki": "https://github.com/hiqdev/omnipay-paypal/wiki",
         "forum": "http://forum.hiqdev.com/"
     },
     "authors": [
         {
+            "nick": "hiqsol",
             "name": "Andrii Vasyliev",
             "role": "Project lead",
             "email": "sol@hiqdev.com",
+            "github": "https://github.com/hiqsol",
             "homepage": "http://hipanel.com/"
         },
         {
+            "nick": "SilverFire",
             "name": "Dmitry Naumenko",
             "role": "Lead backend developer",
             "email": "silverfire@hiqdev.com",
+            "github": "https://github.com/SilverFire",
             "homepage": "http://silverfire.me/"
         },
         {
+            "nick": "tafid",
             "name": "Andrey Klochok",
             "role": "Lead frontend developer",
             "email": "tafid@hiqdev.com",
+            "github": "https://github.com/tafid",
             "homepage": "http://hiqdev.com/"
         },
         {
+            "nick": "BladeRoot",
             "name": "Yuriy Myronchuk",
             "role": "QA Lead",
             "email": "bladeroot@hiqdev.com",
+            "github": "https://github.com/BladeRoot",
             "homepage": "http://hiqdev.com/"
         }
     ],
     "require": {
-        "hiqdev/php-merchant": "*"
+        "omnipay/common": "~2.3"
     },
     "autoload": {
         "psr-4": {
