still redoing to omnipay

--- a/.hidev/config.yml
+++ b/.hidev/config.yml
@@ -1,6 +1,6 @@
 package:
     name:           omnipay-paypal
-    namespace:      hiqdev\php\merchant\paypal
+    namespace:      Omnipay\PayPal
     headline:       Omnipay: PayPal
     title:          PayPal driver for Omnipay PHP payment library
     type:           library
