--- a/composer.json
+++ b/composer.json
@@ -18,35 +18,27 @@
     },
     "authors": [
         {
-            "nick": "hiqsol",
             "name": "Andrii Vasyliev",
             "role": "Project lead",
             "email": "sol@hiqdev.com",
-            "github": "https://github.com/hiqsol",
             "homepage": "http://hipanel.com/"
         },
         {
-            "nick": "SilverFire",
             "name": "Dmitry Naumenko",
             "role": "Lead backend developer",
             "email": "silverfire@hiqdev.com",
-            "github": "https://github.com/SilverFire",
             "homepage": "http://silverfire.me/"
         },
         {
-            "nick": "tafid",
             "name": "Andrey Klochok",
             "role": "Lead frontend developer",
             "email": "tafid@hiqdev.com",
-            "github": "https://github.com/tafid",
             "homepage": "http://hiqdev.com/"
         },
         {
-            "nick": "BladeRoot",
             "name": "Yuriy Myronchuk",
             "role": "QA Lead",
             "email": "bladeroot@hiqdev.com",
-            "github": "https://github.com/BladeRoot",
             "homepage": "http://hiqdev.com/"
         }
     ],
@@ -55,7 +47,7 @@
     },
     "autoload": {
         "psr-4": {
-            "hiqdev\\php\\merchant\\paypal\\": "src"
+            "Omnipay\\PayPal\\": "src"
         }
     }
 }
