--- a/.hidev/config.yml
+++ b/.hidev/config.yml
@@ -1,11 +1,12 @@
 package:
+    type:           library
     name:           omnipay-paypal
     namespace:      Omnipay\PayPal
-    headline:       Omnipay: PayPal
+    headline:       'Omnipay: PayPal'
     title:          PayPal driver for Omnipay PHP payment library
-    type:           library
     license:        MIT
     keywords:       php, paypal, merchant
+    year:           2015
     description:    |
         [Omnipay](https://github.com/omnipay/omnipay) is a framework agnostic, multi-gateway payment
         processing library for PHP 5.3+.
