--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,9 @@
     "require": {
         "omnipay/common": "~2.3"
     },
+    "require-dev": {
+        "omnipay/tests": "~2.0"
+    },
     "autoload": {
         "psr-4": {
             "Omnipay\\PayPal\\": "src"
